force-app/main/default/objects/Job_Requisition__c/Job_Requisition__c.object-meta.xml
<CustomObject>
    <label>Job_Requisition</label>
    <nameField>
        <displayFormat>JR-{0000}</displayFormat>
        <label>Job_Requisition Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Job_Requisitions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>