force-app/main/default/objects/Job_Requisition__c/fields/Salary_Range__c.field-meta.xml
<CustomField>
    <fullName>Salary_Range__c</fullName>
    <label>Salary Range Min</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>