force-app/main/default/objects/Job_Requisition__c/fields/Salary_Range_Max__c.field-meta.xml
<CustomField>
    <fullName>Salary_Range_Max__c</fullName>
    <label>Salary Range Max</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>